[package]
name = "ppc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
futures = "0.3"

# refx-pp-rs = { package = "refx-pp", git = "https://github.com/refx-online/refx-pp-rs/", rev = "cec48acc468b9dbaf7beb208c8854af84694f8ea" }
refx-pp-rs = { package = "refx-pp", git = "https://github.com/refx-online/refx-pp-rs/", rev = "c0033ebe9ac7719255392fc214ff30d2fddd6a57" }